--- a/index.html
+++ b/index.html
@@ -1,34 +1,56 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>My Portfolio</title>
-  <style>
-    body {font-family: Arial; padding: 40px; max-width: 800px; margin: auto;}
-    h1 {color: #333;}
-    .section {margin-bottom: 30px;}
-  </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Front-End Developer Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Hello, I'm Your Name</h1>
-  <p>Welcome to my portfolio!</p>
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1 class="animate">Hi, I'm Hazwani Halim</h1>
+    <p class="animate delay">Front-End Developer | UI/UX Enthusiast</p>
+    <a href="#projects" class="btn animate delay-2">View My Work</a>
+  </section>
 
-  <div class="section">
+  <!-- About Section -->
+  <section class="about" id="about">
     <h2>About Me</h2>
-    <p>Write a little about yourself here.</p>
-  </div>
+    <p>I am a passionate front-end developer with expertise in HTML, CSS, JavaScript, and modern frameworks like Vue.js and React. I create interactive and responsive web experiences.</p>
+  </section>
 
-  <div class="section">
+  <!-- Projects Section -->
+  <section class="projects" id="projects">
     <h2>Projects</h2>
-    <ul>
-      <li>Project 1 – description</li>
-      <li>Project 2 – description</li>
-      <li>Project 3 – description</li>
-    </ul>
-  </div>
+    <div class="project-grid">
+      <div class="project-card animate">
+        <h3>Portfolio Website</h3>
+        <p>My personal portfolio showcasing my skills and projects.</p>
+        <a href="#" target="_blank">View Project</a>
+      </div>
+      <div class="project-card animate delay-1">
+        <h3>Todo App</h3>
+        <p>A modern JavaScript todo app with local storage and animations.</p>
+        <a href="#" target="_blank">View Project</a>
+      </div>
+      <div class="project-card animate delay-2">
+        <h3>E-commerce UI</h3>
+        <p>A clean and responsive e-commerce frontend built with React.</p>
+        <a href="#" target="_blank">View Project</a>
+      </div>
+    </div>
+  </section>
 
-  <div class="section">
-    <h2>Contact</h2>
-    <p>Email: your@email.com</p>
-  </div>
+  <!-- Contact Section -->
+  <section class="contact" id="contact">
+    <h2>Contact Me</h2>
+    <p>Email: <a href="mailto:hazwani@example.com">hazwani@example.com</a></p>
+    <p>LinkedIn: <a href="https://linkedin.com/in/hazwani">linkedin.com/in/hazwani</a></p>
+    <p>GitHub: <a href="https://github.com/hazwanihalim">github.com/hazwanihalim</a></p>
+  </section>
+
+  <script src="script.js"></script>
 </body>
 </html>
