--- a/index.html
+++ b/index.html
@@ -8,48 +8,50 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Hero Section -->
-  <section class="hero">
-    <h1 class="animate">Hi, I'm Hazwani Halim</h1>
-    <p class="animate delay">Front-End Developer | UI/UX Enthusiast</p>
-    <a href="#projects" class="btn animate delay-2">View My Work</a>
-  </section>
+  <div class="container">
+    <!-- Sidebar Navigation -->
+    <nav class="sidebar">
+      <h2>Hazwani Halim</h2>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 
-  <!-- About Section -->
-  <section class="about" id="about">
-    <h2>About Me</h2>
-    <p>I am a passionate front-end developer with expertise in HTML, CSS, JavaScript, and modern frameworks like Vue.js and React. I create interactive and responsive web experiences.</p>
-  </section>
+    <!-- Main Content -->
+    <main class="content">
+      <section class="section" id="about">
+        <h1>About Me</h1>
+        <p>I am a passionate front-end developer with expertise in HTML, CSS, JavaScript, Vue.js, and React. I build modern, responsive, and interactive web experiences.</p>
+      </section>
 
-  <!-- Projects Section -->
-  <section class="projects" id="projects">
-    <h2>Projects</h2>
-    <div class="project-grid">
-      <div class="project-card animate">
-        <h3>Portfolio Website</h3>
-        <p>My personal portfolio showcasing my skills and projects.</p>
-        <a href="#" target="_blank">View Project</a>
-      </div>
-      <div class="project-card animate delay-1">
-        <h3>Todo App</h3>
-        <p>A modern JavaScript todo app with local storage and animations.</p>
-        <a href="#" target="_blank">View Project</a>
-      </div>
-      <div class="project-card animate delay-2">
-        <h3>E-commerce UI</h3>
-        <p>A clean and responsive e-commerce frontend built with React.</p>
-        <a href="#" target="_blank">View Project</a>
-      </div>
-    </div>
-  </section>
+      <section class="section" id="projects">
+        <h1>Projects</h1>
+        <div class="project-grid">
+          <div class="project-card">
+            <h3>Portfolio Website</h3>
+            <p>A modern portfolio to showcase my skills and projects.</p>
+          </div>
+          <div class="project-card">
+            <h3>Todo App</h3>
+            <p>A JavaScript todo app with local storage and animations.</p>
+          </div>
+          <div class="project-card">
+            <h3>E-commerce UI</h3>
+            <p>A responsive e-commerce frontend built with React.</p>
+          </div>
+        </div>
+      </section>
 
-  <!-- Contact Section -->
-  <section class="contact" id="contact">
-    <h2>Contact Me</h2>
-    <p>Email: <a href="mailto:hazwani@example.com">hazwani@example.com</a></p>
-    <p>LinkedIn: <a href="https://linkedin.com/in/hazwani">linkedin.com/in/hazwani</a></p>
-    <p>GitHub: <a href="https://github.com/hazwanihalim">github.com/hazwanihalim</a></p>
-  </section>
+      <section class="section" id="contact">
+        <h1>Contact Me</h1>
+        <p>Email: <a href="mailto:hazwani@example.com">hazwani@example.com</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/hazwani">linkedin.com/in/hazwani</a></p>
+        <p>GitHub: <a href="https://github.com/hazwanihalim">github.com/hazwanihalim</a></p>
+      </section>
+    </main>
+  </div>
 
   <script src="script.js"></script>
 </body>
